Fix sticky on mobile/tablet

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -13950,6 +13950,7 @@ body:not(.no-outline) .product__accordion__title.focus-visible {
 @media only screen and (max-width: 767px) {
   .product-gallery {
     margin-bottom: var(--gutter-mobile);
+    position: relative;
   }
 }
 
